welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
  for (i<-1 to 3)
  {
    for (i<-1 to 3)
    {
      faireMotif(c)
    }
    gauche()
    avance(5)
    droite()
  }
}

def peindre(c:Color)
{
  
  if (getCouleurBrosse() != c)
  {
    setCouleurBrosse(c)
  }
  baisseBrosse()
  leveBrosse()
}


def faireV(c:Color)
{
  avance()
  peindre(c)
  avance()
  gauche()
  avance()
  peindre(c)
  recule()
  droite()
  avance()
  peindre(c)
  avance()
  gauche()
}

def faireMotif(c:Color)
{
  faireV(Color.Yellow)
  faireV(Color.Red)
  faireV(Color.Blue)
  faireV(Color.Green)
}